--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,20 +11,19 @@
 					<hr>
 				<div id="share_box">
 					<p><%= @post.title %></p>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-google-plus"></i></a>
+
+				   <!-- Twitter -->
+					<a onclick="javascript:window.open('https://twitter.com/share?text=<%= @post.title %> by @MartinBenes66 - &amp; url=<%=url_for([@post, {only_path:false}])%>','_blank','width=800, height=500,top=200,left=300');void(0);"><i class="fa fa-twitter"></i></a>
+	
+				    <!-- Facebook -->				
+					<a onclick="javascript:window.open('https://www.facebook.com/sharer.php?u=<%=url_for([@post, {only_path:false}])%>','_blank','width=800, height=500,top=200,left=300');void(0);"><i class="fa fa-facebook"></i></a>
+					
+				    <!-- Google Pluse-->
+					<a onclick="javascript:window.open('https://plus.google.com/share?url=<%=url_for([@post, {only_path:false}])%>','_blank','width=800, height=500,top=200,left=300');void(0);">
+					<i class="fa fa-google-plus"></i></a>
 				</div>
 				<hr>
 				</div>
 				<!-- End Content-->
 
 
-
-	<%= @post.title %> <br>
-	<%= @post.content %> 
-
-
-	<%= link_to "Edit", edit_post_path(@post) %>
-
-	<%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
