--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,11 +6,11 @@
 						<hr>
 					</header>
 					<div id="content">
-						<%= @post.content%>
+						<%= markdown @post.content%>
 					</div>
 					<hr>
 				<div id="share_box">
-					<p><%= @post.title %></p>
+					<p>Share: <%= @post.title %></p>
 
 				   <!-- Twitter -->
 					<a onclick="javascript:window.open('https://twitter.com/share?text=<%= @post.title %> by @MartinBenes66 - &amp; url=<%=url_for([@post, {only_path:false}])%>','_blank','width=800, height=500,top=200,left=300');void(0);"><i class="fa fa-twitter"></i></a>
@@ -27,3 +27,9 @@
 				<!-- End Content-->
 
 
+
+
+
+	<%= link_to "Edit", edit_post_path(@post) %>
+
+	
